// proto/post.proto
syntax = "proto3";

package post;

option go_package = "proto/postpb";

message Post {
  string postId = 1;
  string authorId = 2;
  string content = 3;
}

message NotificationResponse {
  string message = 1;
}

service PostService {
  rpc PublishPost(Post) returns (NotificationResponse);
}
